[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/sprite/enemy.png" type="Texture" id=1]
[ext_resource path="res://asset/script/enemy.gd" type="Script" id=2]
[ext_resource path="res://asset/animation/character_walking.tres" type="Animation" id=3]
[ext_resource path="res://asset/animation/character_idle.tres" type="Animation" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 248.516

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 1.02371 )
texture = ExtResource( 1 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/character_idle = ExtResource( 4 )
anims/character_walking = ExtResource( 3 )

[node name="attack_delay" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
